fix: Resolvendo Bug de login com linkedin
Foi realizado configurações para acesso da API com perfil do linkedin.

--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="PT-BR">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hello World</title>
 </head>
 <body>
 
-<div>Bem vindo ao Social Login</div>
+<div> Seja Bem Vindo ao Social Login <span th:text="${name}"></span> </div>
 
 </body>
 </html>
